[package]
name = "delta_stepping"
version = "0.1.0"
authors = ["John R. Gilbert <gilbert@cs.ucsb.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono="0.4.15"
clap="2"
itertools="0"
rand = "0.7"
regex="1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.spmat]
path = "../spmat"

[dependencies.convey_hpc]
path = "../../../../../convey_private"
