[package]
name = "spmat"
version = "0.1.0"
authors = ["Bill Carlson <wwc559@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convey_hpc = { path="../../../../../convey_private" }
rand = "0.7"
serde = "1.0"

[dev-dependencies]
clap="2"
